# conf-kakfa-mongodb-stk

./: .gitignore  CreatePipelineFull.py  CreatePipelineFull_v2.py  CreatePipelineFull_v3.py  Dockerfile  README.md  cheat_sheet.md  connect_logs.txt  create_pipe_daemon.py  create_pipeline.py  destroy_pipeline.py  docker-compose.yml  ksqldb_log_excerpt.txt  requirements.txt  run_book.md  setup.cfg  setup.py  telemetry_raw_config.json  testtt.py
connectors/: mongo-sink-telemetry-raw.json  mongo-sink-vehicle-latest.json  mongodb-sink-telemetry.json  mongodb-sink-vehicle-latest.json
connectors copy/: mongo-sink-telemetry-raw.json  mongo-sink-vehicle-latest.json
docker-connect/: Dockerfile  entrypoint-init.sh  install-connectors.sh
docker-connect/connectors/: mongo-sink-telemetry_raw.json  mongo-sink-vehicle_latest.json
docker-connect/ksql/: 02_create_transformed_stream.ksql  (+1 more)
ksql/: 01_create_stream.ksql  02_create_transformed_stream.ksql  03_create_vehicle_latest_table.ksql  04_pull_queries_or_checks.ksql
misc/: mongo-sink-test.json  producer_simulator.py  run_book.md
pipeline/: config.py  connectors_utils.py  kafka_utils.py  ksql_describe_response.json  ksql_utils.py  main.py  main_old.py  main_refactored.py  mongo_utils.py  orchestrator.py  orchestrator.py.bak  producer copy.py  producer.py  sample.py  ui-config.toml
producers/: producer.py  producer_sample.py
python-producer/: check_pipeline.py  produce.ps1  producer.py  requirements.txt  setup_pipeline.py
tests/: VEHICLE_LATEST.py  e2e_t2.py  e2e_test.py
usecases/: use_case1.json  use_case2.txt
(+28 files in other folders)
