[metadata]
name = telemetry_pipeline
version = 0.0.2
description = Modular Kafka-KSQL-MongoDB telemetry pipeline
author = Prashanth

[options]
packages = find:
include_package_data = True
install_requires =
    kafka-python>=2.0.2
    pymongo>=4.0
    requests>=2.28
    confluent-kafka==2.2.0
    tabulate
python_requires = >=3.8

[options.entry_points]
console_scripts =
    telemetry-pipeline = pipeline.main:main
